--- a/public/modules/storyparts/views/create-first-storypart.client.view.html
+++ b/public/modules/storyparts/views/create-first-storypart.client.view.html
@@ -1,29 +1,30 @@
-<section data-ng-controller="StorypartsController">
+<section >
     <div class="page-header">
         <h1>Kirjoita tarinan ensimmäiset 3 riviä</h1>
     </div>
     <div class="col-md-12">
-        <form class="form-horizontal"  ng-submit="create()" novalidate>
-            <fieldset>
-                <div class="form-group">
-                    <div ng-repeat="(rowNumber, value) in [0,1,2]">
-                        <label class="control-label">{rowNumber+1} rivi</label>
 
-                        <div class="controls">
-                            <input type="text" data-ng-model="newStoryPartFields.rows[rowNumber]" class="form-control"
-                                   required>
-                        </div>
-                    </div>
+        <fieldset>
 
+            <div ng-repeat="(i,v) in [0,1,2]" class="row form-group">
+
+                <div class="controls">
+                    <input placeholder="{{$index+1}} rivi" name="rowField{{$index+1}}" id="rowField{{$index+1}}"
+                           type="text"
+                           data-ng-model="newStoryPartFields.rows[$index]" class="form-control" required>
                 </div>
+                <br/>
+            </div>
 
-                <div class="form-group">
-                    <input type="submit" class="btn btn-default">
-                </div>
-				<div data-ng-show="error" class="text-danger">
-					<strong data-ng-bind="error"></strong>
-				</div>
-            </fieldset>
-        </form>
+
+            <div class="form-group">
+                <input type="button" ng-click="create()" name="firstPartSubmitButton" value="Seuraavan vuoro jatkaa"
+                       class="btn btn-default"/>
+            </div>
+            <div data-ng-show="error" class="text-danger">
+                <strong data-ng-bind="error"></strong>
+            </div>
+        </fieldset>
+
     </div>
 </section>
