--- a/public/modules/storyparts/views/create-first-storypart.client.view.html
+++ b/public/modules/storyparts/views/create-first-storypart.client.view.html
@@ -10,7 +10,7 @@
 
                 <div class="controls">
                     <input placeholder="{{$index+1}} rivi" name="rowField{{$index+1}}" id="rowField{{$index+1}}"
-                           type="text"
+                           type="text" maxlength="80"
                            data-ng-model="newStoryPartFields.rows[$index]" class="form-control" required>
                 </div>
                 <br/>
