--- a/public/modules/storyparts/views/create-next-storypart.client.view.html
+++ b/public/modules/storyparts/views/create-next-storypart.client.view.html
@@ -24,7 +24,7 @@
         <div class=" row form-group">
             <input type="button" ng-click="create()" value="Seuraavan vuoro jatkaa" class="btn btn-info col-md-2"/>
             <input type="button" value="Tarina on valmis" class="btn btn-success col-md-offset-8 col-md-2"
-                   data-ng-click="lastPartReady()"/>
+                   data-ng-click="create(true)"/>
         </div>
         <div data-ng-show="error" class="text-danger">
             <strong data-ng-bind="error"></strong>
