Storypart and story mocha(unit) tests are passing now , README.md  updated , bower.json, gruntfile.js include now updated name.

--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -5,14 +5,15 @@
 
         <div class="row">
             <p class="lead">
-                Tarinapeli
+                Tarinapeli - Alpha version
             </p>
+
         </div>
     </div>
 
     <div class="row" data-ng-show="!authentication.user">
         <h1>
-            <span>  <a href="/#!/signup" >Kirjaudu sisään</a>, niin pääset mukaan Sanapeliin  </span>
+            <span>  <a href="/#!/signup">Kirjaudu sisään</a>, niin pääset mukaan Tarinapeliin</span>
         </h1>
     </div>
 
