--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -1,29 +1,31 @@
 <section class="row" data-ng-controller="AuthenticationController">
-	<h3 class="col-md-12 text-center">Sign in using your social accounts</h3>
-	<div class="col-md-12 text-center">
+	<h3 ng-if="false" class="col-md-12 text-center">Sign in using your social accounts</h3>
+
+	<div ng-if="false" class="col-md-12 text-center">
 		<a href="/auth/facebook" class="undecorated-link">
 			<img src="/modules/users/img/buttons/facebook.png">
 		</a>
 
 	</div>
-	<h3 class="col-md-12 text-center">Or with your account</h3>
+	<h3 class="col-md-12 text-center">Kirjaudu sisään</h3>
 	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
 		<form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
 			<fieldset>
 				<div class="form-group">
-					<label for="username">Username</label>
+					<label for="username">Käyttäjätunnus</label>
 					<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
 				</div>
 				<div class="form-group">
-					<label for="password">Password</label>
+					<label for="password">Salasana</label>
 					<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
 				</div>
 				<div class="text-center form-group">
-					<button type="submit" class="btn btn-primary">Sign in</button>&nbsp; or&nbsp;
-					<a href="/#!/signup">Sign up</a>
+					<button type="submit" class="btn btn-primary">Kirjaudu sisään</button>
+					&nbsp; tai&nbsp;
+					<a href="/#!/signup">Luo tili</a>
 				</div>
 				<div class="forgot-password">
-					<a href="/#!/password/forgot">Forgot your password?</a>
+					<a href="/#!/password/forgot">Unohditko salasanan?</a>
 				</div>
 				<div data-ng-show="error" class="text-center text-danger">
 					<strong data-ng-bind="error"></strong>
