--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -5,9 +5,12 @@
 
         <div class="row">
             <p class="lead">
-                Tarinapeli - Alpha version
+                Tarinapeli
             </p>
 
+        </div>
+        <div class="row">
+            Alpha version
         </div>
     </div>
 
