First draftings of storygame ui, email settings work

--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -22,7 +22,7 @@
 
     <div class="row" data-ng-show="authentication.user">
         <p>
-            <a ui-sref="createStory.firstPart" class="btn btn-primary btn-lg">Aloita peli</a>
+            <a ui-sref="listYourGames" class="btn btn-primary btn-lg">Aloita peli</a>
         </p>
     </div>
 
