--- a/public/modules/stories/views/list-stories.client.view.html
+++ b/public/modules/stories/views/list-stories.client.view.html
@@ -3,7 +3,7 @@
         <h1>Stories</h1>
     </div>
     <div class="list-group">
-        <a data-ng-repeat="story in stories" data-ng-href="#!/stories/{{story._id}}" class="list-group-item">
+        <a data-ng-repeat="story in stories" class="list-group-item">
 			<small class="list-group-item-text">
 				Posted on
 				<span data-ng-bind="story.created | date:'medium'"></span>
