--- a/public/modules/storygames/views/create-storygame.client.view.html
+++ b/public/modules/storygames/views/create-storygame.client.view.html
@@ -1,15 +1,41 @@
-<section data-ng-controller="StorygamesController">
+<section>
     <div class="page-header">
-        <h1>New Storygame</h1>
+        <h1>Tarinapeliesi tilanne</h1>
     </div>
     <div class="col-md-12">
-        <form class="form-horizontal" data-ng-submit="create()" novalidate>
+        <form class="form-horizontal" data-ng-submit="storygameDefinitionReady()" novalidate>
             <fieldset>
                 <div class="form-group">
-                    <label class="control-label" for="name">Name</label>
+                    <label class="control-label" for="gameTitle">Pelin otsikko</label>
                     <div class="controls">
-                        <input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
+                        <input type="text" data-ng-model="newGameDefinitions.gameTitle" id="gameTitle"
+                               class="form-control"
+                               placeholder="Tarinapelin otsikko" required>
                     </div>
+                    <label class="control-label" for="gameDescription">Ohjeesi tarinoinnille</label>
+
+                    <div class="controls">
+                        <input type="text" data-ng-model="newGameDefinitions.gameDescriptions" id="gameDescription"
+                               class="form-control"
+                               placeholder="Haluamasi tarinan piirteet">
+                    </div>
+
+                    <label class="control-label" for="gameAdmin">Tämän pelin pomo</label>
+
+                    <div class="controls">
+                        <input type="text" data-ng-model="authentication.user.displayName" id="gameAdmin"
+                               class="form-control"
+                               disabled/>
+                    </div>
+
+                    <label class="control-label" for="gamePlayers">Pelaajat</label>
+
+                    <div class="controls" ng-repeat="player in newGameDefinitions.players ">
+                        <input type="text" data-ng-model="player.inviteEmail" id="gamePlayers" class="form-control"
+                               disabled/>
+                    </div>
+
+
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btn btn-default">
