--- a/public/modules/storygames/views/list-storygames.client.view.html
+++ b/public/modules/storygames/views/list-storygames.client.view.html
@@ -1,19 +1,36 @@
 <section data-ng-controller="StorygamesController" data-ng-init="find()">
-    <div class="page-header">
-        <h1>Storygames</h1>
+    <div>
+        <h1>Tarinapelien tilanne</h1>
     </div>
-    <div class="list-group">
-        <a data-ng-repeat="storygame in storygames" data-ng-href="#!/storygames/{{storygame._id}}" class="list-group-item">
-			<small class="list-group-item-text">
-				Posted on
-				<span data-ng-bind="storygame.created | date:'medium'"></span>
-				by
-				<span data-ng-bind="storygame.user.displayName"></span>
-			</small>
-			<h4 class="list-group-item-heading" data-ng-bind="storygame.name"></h4>
-        </a>
-    </div>
-    <div class="alert alert-warning text-center" data-ng-hide="!storygames.$resolved || storygames.length">
-    	No Storygames yet, why don't you <a href="/#!/storygames/create">create one</a>?
+    <div class="row">
+
+        <div class="col-md-4 col-sm-12">
+            <div ng-click="startGameDefinition()" class="alert alert-warning text-center"
+                 data-ng-hide="!storygames.$resolved ">
+                Haluatko aloittaa <a sref="createGameDefining">uuden tarinapelin</a>?
+            </div>
+
+        </div>
+        <div class="list-group col-md-8 col-sm-12">
+
+            <a data-ng-repeat="storygame in storygames"
+               data-ui-sref="gamePlaying.createStory.nextPart({
+               'storygameId':storygame._id
+
+               })"
+               class="list-group-item">
+                <small class="list-group-item-text">
+                    Posted on
+                    <span data-ng-bind="storygame.created | date:'medium'"></span>
+                    by
+                    <span data-ng-bind="storygame.user.displayName"></span>
+                </small>
+                <h4 class="list-group-item-heading" data-ng-bind="storygame.name"></h4>
+            </a>
+        </div>
+        <div class="col-md-8 col-sm-12" ng-if="storygames.length===0">
+            <span>Et ole tällä hetkellä mukana missään tarinapelissä</span>
+        </div>
+
     </div>
 </section>
