--- a/public/modules/storygames/views/list-storygames.client.view.html
+++ b/public/modules/storygames/views/list-storygames.client.view.html
@@ -7,7 +7,7 @@
         <div class="col-md-4 col-sm-12">
             <div ng-click="startGameDefinition()" class="alert alert-warning text-center"
                  data-ng-hide="!storygames.$resolved ">
-                Haluatko aloittaa <a sref="createGameDefining">uuden tarinapelin</a>?
+                Haluatko aloittaa <a ui-sref="createGameDefining">uuden tarinapelin</a>?
             </div>
 
         </div>
