--- a/public/modules/storyparts/views/create-next-storypart.client.view.html
+++ b/public/modules/storyparts/views/create-next-storypart.client.view.html
@@ -21,7 +21,7 @@
             </div>
             <br/>
             <div class=" row form-group">
-                <input type="button" ng-click="create()" ng-disabled="storyPartForm.$invalid"
+                <input type="button" ng-click="createStorypart()" ng-disabled="storyPartForm.$invalid"
                        value="Seuraavan vuoro jatkaa" class="btn btn-info col-md-2"/>
                 <input type="button" value="Tarina on valmis" class="btn btn-success col-md-offset-8 col-md-2"
                        data-ng-click="create(true)"
