--- a/public/modules/storygames/views/play-storygame.client.view.html
+++ b/public/modules/storygames/views/play-storygame.client.view.html
@@ -1,23 +1,38 @@
-<section data-ng-controller="StorygamesController" data-ng-init="findOne()">
-    <div class="page-header">
-        <h1>Edit Storygame</h1>
+<section>
+    <div>
+        <h1>Tarinapeli käynnissä</h1>
     </div>
-    <div class="col-md-12">
-        <form class="form-horizontal" data-ng-submit="update()" novalidate>
-            <fieldset>
-                <div class="form-group">
-                    <label class="control-label" for="name">Name</label>
-                    <div class="controls">
-                        <input type="text" data-ng-model="storygame.name" id="name" class="form-control" placeholder="Name" required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Update" class="btn btn-default">
-                </div>
-				<div data-ng-show="error" class="text-danger">
-					<strong data-ng-bind="error"></strong>
-				</div>
-            </fieldset>
-        </form>
+    <div class="row">
+
+        <div class="col-md-4 col-sm-12">
+            <div ng-click="startGameDefinition()" class="alert alert-warning text-center"
+                 data-ng-hide="!storygames.$resolved ">
+                Haluatko aloittaa <a ui-sref="createGameDefining">uuden tarinapelin</a>?
+            </div>
+
+        </div>
+        <div class="list-group col-md-8 col-sm-12">
+
+            <a data-ng-repeat="storygame in storygames"
+               data-ui-sref="gamePlaying.createStory.nextPart({
+               'storygameId':storygame._id
+
+               })"
+               class="list-group-item">
+                <small class="list-group-item-text">
+                    Posted on
+                    <span data-ng-bind="storygame.created | date:'medium'"></span>
+                    by
+                    <span data-ng-bind="storygame.user.displayName"></span>
+                </small>
+                <h4 class="list-group-item-heading" data-ng-bind="storygame.name"></h4>
+            </a>
+        </div>
+        <div class="col-md-8 col-sm-12" ng-if="storygames.length===0">
+            <span>Et ole tällä hetkellä mukana missään tarinapelissä</span>
+        </div>
+
+        <ui-view></ui-view>
+
     </div>
 </section>
