--- a/public/modules/storyparts/views/create-first-storypart.client.view.html
+++ b/public/modules/storyparts/views/create-first-storypart.client.view.html
@@ -17,7 +17,7 @@
             </div>
             <br/>
             <div class="form-group">
-                <input type="button" ng-click="create()" ng-disabled="storyPartForm.$invalid"
+                <input type="button" ng-click="createStorypart()" ng-disabled="storyPartForm.$invalid"
                        name="firstPartSubmitButton" value="Seuraavan vuoro jatkaa"
                        class="btn btn-info btn-default"/>
             </div>
