basic gamestory draftings, works for one player, some drafting for next player selection, but the other player invitation is still missing

--- a/public/modules/stories/views/view-story.client.view.html
+++ b/public/modules/stories/views/view-story.client.view.html
@@ -29,7 +29,7 @@
     <br/>
     <div class="row" data-ng-show="authentication.user">
         <p>
-            <a ui-sref="createStory.firstPart" class="btn btn-primary">Aloita uusi peli</a>
+            <a ui-sref="createGameDefining" class="btn btn-primary">Aloita uusi peli</a>
         </p>
     </div>
 
